--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,9 @@
   "manifest_version": 3,
   "name": "Playlist Extension",
   "description": "test",
+  "permissions": ["sidePanel"],
   "version": "0.1",
-  "action": {
-    "default_popup": "popup/test.html"
+  "side_panel": {
+    "default_path": "popup/test.html"
   }
 }
