--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,8 @@
   "version": "0.1",
   "side_panel": {
     "default_path": "popup/test.html"
+  },
+  "content_security_policy": {
+    "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self';"
   }
 }
